--- a/LambdaVGames/MainWindow.xaml
+++ b/LambdaVGames/MainWindow.xaml
@@ -6,28 +6,49 @@
         xmlns:local="clr-namespace:LambdaVGames"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    
+    <Grid Margin="0, 5">
+        
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="7*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition/>
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
+        
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
         
-        <Label Grid.Row="0" Grid.ColumnSpan="2" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center">LambdaVGames</Label>
+        <GroupBox Grid.RowSpan="2" BorderThickness="1" Header="LambdaVGames list"><ListBox x:Name="Gameslbx"/></GroupBox>
         
-        <ListBox Grid.Row="1" Grid.RowSpan="2" Grid.Column="0"></ListBox>
+        <ScrollViewer Grid.Column="1" Margin="5,0" VerticalScrollBarVisibility="Auto">
+            <StackPanel>
+                <GroupBox Header="Cover">
+                    <Button Width="120" Height="150">
+                        <Image x:Name="Converimage" Stretch="UniformToFill"/>
+                    </Button>
+                </GroupBox>
+                
+                <GroupBox Header="Title"><TextBox x:Name="Titletbx"/></GroupBox>
+                <GroupBox Header="Category"><TextBox x:Name="Catetbx"/></GroupBox>
+                <GroupBox Header="Description"><TextBox x:Name="Desctbx" Height="100" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/></GroupBox>
+                <GroupBox Header="Price"><TextBox x:Name="Pricetbx"/></GroupBox>
+                <GroupBox Header="Release Date"><DatePicker x:Name="Datedp"/></GroupBox>
+            
+                <GroupBox Header="Multiplayer">
+                    <StackPanel Orientation="Horizontal">
+                        <RadioButton GroupName="multiplay" Margin="0,0,10,0">Yes</RadioButton>
+                        <RadioButton GroupName="multiplay">No</RadioButton>
+                    </StackPanel>
+                </GroupBox>
+            
+            </StackPanel>
+        </ScrollViewer>
         
-        <StackPanel Grid.Row="1" Grid.Column="1">
-            <Label>Name: </Label>
-            <Label>Multiplayer: </Label>
-            <Label>Description:</Label>
+        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Width="100" Margin="5" Content="Remove"/>
+            <Button Width="100" Margin="5" Content="Add"/>
         </StackPanel>
         
-        <Button Grid.Column="1" Grid.Row="2" Width="200" HorizontalAlignment="Left">Remove Game</Button>
-        <Button Grid.Column="1" Grid.Row="2" Width="200" HorizontalAlignment="Right">Add Game</Button>
     </Grid>
 </Window>
