--- a/LambdaVGames/MainWindow.xaml
+++ b/LambdaVGames/MainWindow.xaml
@@ -18,7 +18,18 @@
         </Grid.RowDefinitions>
 
         <Menu Grid.ColumnSpan="2" VerticalAlignment="Center">
-            <MenuItem Header="File" />
+            <MenuItem Header="File">
+                <MenuItem Header="Change Connection"/>
+                <MenuItem Header="Export Database Schema"/>
+                <Separator/>
+                <MenuItem Header="Settings"/>
+                <Separator/>
+                <MenuItem Header="Exit" Click="OnMenuCloseClick"/>
+            </MenuItem>
+            <MenuItem Header="Help">
+                <MenuItem Header="Report" Tag="https://github.com/CultOfTheLambda/LambdaVGames/issues" Click="OnMenuLinkClick"/>
+                <MenuItem Header="Documentation" Tag="https://github.com/CultOfTheLambda/LambdaVGames/blob/master/README.md" Click="OnMenuLinkClick"/>
+            </MenuItem>
         </Menu>
 
         <DockPanel Grid.Row="1" Grid.ColumnSpan="2" Background="#4C73A8" Height="50" VerticalAlignment="Center">
