--- a/LambdaVGames/MainWindow.xaml
+++ b/LambdaVGames/MainWindow.xaml
@@ -72,7 +72,7 @@
 
                     <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                         <Label Content="Category:" Width="100" Foreground="White" VerticalAlignment="Center"/>
-                        <TextBox x:Name="CategoryTextBox" Width="400" Background="#4C73A8" Foreground="White" BorderBrush="#666666"/>
+                        <TextBox x:Name="CategoryTextBox" Width="400" Background="#4C73A8" Foreground="White" BorderBrush="#666666" TextChanged="CategoryTextBox_TextChanged"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
