--- a/LambdaVGames/PreferencesDialog.xaml
+++ b/LambdaVGames/PreferencesDialog.xaml
@@ -32,7 +32,7 @@
 
         <DockPanel Grid.Row="2" Grid.ColumnSpan="2" Background="#4C73A8">
             <DockPanel HorizontalAlignment="Right" Margin="10">
-                <Button Content="Cancel" Width="125" Margin="10, 0" Background="White"/>
+                <Button Content="Cancel" Width="125" Margin="10, 0" Background="White" Click="OnCancleClick"/>
                 <Button Content="Save" Width="125" Margin="10, 0" Background="White"/>
             </DockPanel>
         </DockPanel>
