--- a/LambdaVGames/MainWindow.xaml
+++ b/LambdaVGames/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LambdaVGames"
+        xmlns:controls="clr-namespace:LambdaVGames.Controls"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="900" Loaded="MainWindow_OnLoaded">
     <Grid>
@@ -71,33 +72,33 @@
 
                     <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                         <Label Content="Name:" Width="100" Foreground="White" VerticalAlignment="Center"/>
-                        <local:UserTextBox x:Name="NameTextBox" Width="400" Background="#4C73A8" Foreground="White" BorderBrush="#666666" TextChanged="NameTextBox_TextChanged"/>
+                        <controls:UserTextBox x:Name="NameTextBox" Width="400" Background="#4C73A8" Foreground="White" BorderBrush="#666666" TextEditEnd="NameTextBox_TextEditEnd"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                         <Label Content="Category:" Width="100" Foreground="White" VerticalAlignment="Center"/>
-                        <TextBox x:Name="CategoryTextBox" Width="400" Background="#4C73A8" Foreground="White" BorderBrush="#666666" TextChanged="CategoryTextBox_TextChanged"/>
+                        <controls:UserTextBox x:Name="CategoryTextBox" Width="400" Background="#4C73A8" Foreground="White" BorderBrush="#666666" TextEditEnd="CategoryTextBox_TextEditEnd"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                         <Label Content="Description:" Width="100" Foreground="White" VerticalAlignment="Top"/>
-                        <TextBox x:Name="DescriptionTextBox" Width="400" Height="100" AcceptsReturn="True" TextWrapping="Wrap" Background="#4C73A8" Foreground="White" BorderBrush="#666666" TextChanged="DescriptionTextBox_TextChanged"/>
+                        <controls:UserTextBox x:Name="DescriptionTextBox" Width="400" Height="100" AcceptsReturn="True" TextWrapping="Wrap" Background="#4C73A8" Foreground="White" BorderBrush="#666666" TextEditEnd="DescriptionTextBox_TextEditEnd"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                         <Label Content="Price:" Width="100" Foreground="White" VerticalAlignment="Center"/>
-                        <TextBox x:Name="PriceTextBox" Width="400" Background="#4C73A8" Foreground="White" BorderBrush="#666666" TextChanged="PriceTextBox_TextChanged"/>
+                        <controls:UserTextBox x:Name="PriceTextBox" Width="400" Background="#4C73A8" Foreground="White" BorderBrush="#666666" TextEditEnd="PriceTextBox_TextEditEnd"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                         <Label Content="Release Date:" Width="100" Foreground="White" VerticalAlignment="Center"/>
-                        <DatePicker x:Name="ReleaseDateTextBox" Width="400" Background="#FF4C73A8" Foreground="White" BorderBrush="#FFC9C9C9" SelectedDateChanged="ReleaseDateTextBox_SelectedDateChanged">
+                        <controls:UserDatePicker x:Name="ReleaseDateTextBox" Width="400" Background="#FF4C73A8" Foreground="White" BorderBrush="#FFC9C9C9" SelectedDateChanged="ReleaseDateTextBox_SelectedDateChanged">
                             <DatePicker.Resources>
                                 <Style TargetType="DatePickerTextBox">
                                     <Setter Property="Background" Value="#FF4C73A8"/>
                                 </Style>
                             </DatePicker.Resources>
-                        </DatePicker>
+                        </controls:UserDatePicker>
 
                     </StackPanel>
 
