--- a/LambdaVGames/MainWindow.xaml
+++ b/LambdaVGames/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:LambdaVGames"
         xmlns:controls="clr-namespace:LambdaVGames.Controls"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="900" Loaded="MainWindow_OnLoaded">
+        Title="MainWindow" Height="600" Width="900" Loaded="MainWindow_OnLoaded" Initialized="MainWindow_Initialized">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3*" />
