--- a/LambdaVGames/Windows/MainWindow.xaml
+++ b/LambdaVGames/Windows/MainWindow.xaml
@@ -1,9 +1,8 @@
-﻿<Window x:Class="LambdaVGames.MainWindow"
+﻿<Window x:Class="LambdaVGames.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LambdaVGames"
         xmlns:controls="clr-namespace:LambdaVGames.Controls"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="900" Loaded="MainWindow_OnLoaded" Initialized="MainWindow_Initialized">
