--- a/LambdaVGames/Windows/SettingsPages/AccountPage.xaml
+++ b/LambdaVGames/Windows/SettingsPages/AccountPage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="LambdaVGames.SettingsPages.AccountPage"
+﻿<Page x:Class="LambdaVGames.Windows.SettingsPages.AccountPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:LambdaVGames.SettingsPages"
+      xmlns:local="clr-namespace:LambdaVGames.Windows.SettingsPages"
       mc:Ignorable="d"
       Title="AccountPage" d:DesignHeight="400" d:DesignWidth="900">
       <StackPanel>
