--- a/LambdaVGames/Windows/SettingsPages/AppearancePage.xaml
+++ b/LambdaVGames/Windows/SettingsPages/AppearancePage.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="LambdaVGames.SettingsPages.AppearancePage"
+﻿<Page x:Class="LambdaVGames.Windows.SettingsPages.AppearancePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:cp="http://schemas.xceed.com/wpf/xaml/toolkit"
-      xmlns:local="clr-namespace:LambdaVGames.SettingsPages"
+      xmlns:local="clr-namespace:LambdaVGames.Windows.SettingsPages"
       mc:Ignorable="d"
       Title="ApperancePage">
     <StackPanel Orientation="Vertical">
